--- a/hugo.toml
+++ b/hugo.toml
@@ -127,6 +127,12 @@ pagination.pagerSize = 5
         identifier = "showcase"
         name = "Showcase"
         url = "/showcase"
+      [[languages.en.menu.main]]
+        identifier = "resume"
+        name = "Resume"
+        url = "/resume.pdf"
+
+
 
 [module]
   # In case you would like to make changes to the theme and keep it locally in you repository,
