--- a/hugo.toml
+++ b/hugo.toml
@@ -44,11 +44,11 @@ pagination.pagerSize = 6
   # oneHeadingSize = true # default
 
   # whether to show a page's estimated reading time
-  readingTime = true # default
+  readingTime = false # default
 
   # whether to show a table of contents
   # can be overridden in a page's front-matter
-  Toc = true # default
+  Toc = false # default
 
   # set title for the table of contents
   # can be overridden in a page's front-matter
